--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning",
       "C_Sharp_Web_API.Exercises": "Information"
     }
+  },
+  
+  "ConnectionStrings": {
+    "WorkoutDb": "Host=localhost;Port=5432;Database=trackmylife;Username=tml;Password=tmlpw"
   }
 }
