--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WorkoutDb": "Host=localhost;Port=5432;Database=trackmylife;Username=tml;Password=tmlpw"
+  }
 }
