Added Token based Authentication and Registration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,8 +6,20 @@
       "C_Sharp_Web_API.Exercises": "Information"
     }
   },
-  
   "ConnectionStrings": {
     "WorkoutDb": "Host=localhost;Port=5432;Database=trackmylife;Username=tml;Password=tmlpw"
+  },
+  "Authentication": {
+    "SecretForKey": "OgidhJD3IB7TWuezQ70eTvAgESUGxh5A4eF5csjOyDc=",
+    "Issuer": "https://localhost:5264",
+    "Audience": "workout-api",
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "workout-api"
+        ],
+        "ValidIssuer": "https://localhost:5264"
+      }
+    }
   }
 }
