--- a/C_Sharp_Web_API.csproj
+++ b/C_Sharp_Web_API.csproj
@@ -26,4 +26,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\WorkoutExercises\Dtos\" />
+    </ItemGroup>
+
 </Project>
