- Added XML comments for controllers and endpoints for improved API documentation - Introduced API versioning with default version set to 0.1 - Added Swagger/OpenAPI integration with security definitions for bearer token authentication - Updated project file to generate XML documentation and include relevant packages

--- a/C_Sharp_Web_API.csproj
+++ b/C_Sharp_Web_API.csproj
@@ -8,7 +8,12 @@
       <UserSecretsId>42d13ac6-04d8-42e6-a155-345d60f5f347</UserSecretsId>
   </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>C_Sharp_Web_API.xml</DocumentationFile>
+    </PropertyGroup>
+
     <ItemGroup>
+        <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
         <PackageReference Include="AutoMapper" Version="15.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
@@ -23,6 +28,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     </ItemGroup>
 
